6.2.2 - chunkOrder time gap fix

--- a/index.css
+++ b/index.css
@@ -5347,7 +5347,7 @@ input#searchChunks {
 
 .skill-button {
     width: 28%;
-    font-size: 19px;
+    font-size: 18px;
     text-align: center;
 }
 
@@ -5364,7 +5364,7 @@ input#searchChunks {
 
 .skill-button2 {
     width: 28%;
-    font-size: 19px;
+    font-size: 18px;
     text-align: center;
     border-left: solid 1px var(--color8);
 }
